// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Favorite > View default 1`] = `
<body>
  <div>
    <div
      class="_favorite_9c2c93"
    >
      <svg
        aria-hidden="true"
        class="yc-icon"
        fill="currentColor"
        height="16"
        stroke="none"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <svg
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m9.194 5 .351.873.94.064 3.197.217-2.46 2.055-.722.603.23.914.782 3.108-2.714-1.704L8 10.629l-.798.5-2.714 1.705.782-3.108.23-.914-.723-.603-2.46-2.055 3.198-.217.94-.064.35-.874L8 2.025 9.194 5Zm-7.723-.292 3.943-.268L6.886.773C7.29-.231 8.71-.231 9.114.773l1.472 3.667 3.943.268c1.08.073 1.518 1.424.688 2.118L12.185 9.36l.964 3.832c.264 1.05-.886 1.884-1.802 1.31L8 12.4l-3.347 2.101c-.916.575-2.066-.26-1.802-1.309l.964-3.832L.783 6.826c-.83-.694-.391-2.045.688-2.118Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </svg>
    </div>
  </div>
</body>
`;

exports[`Favorite > View selected 1`] = `
<body>
  <div>
    <div
      class="_favorite_9c2c93"
    >
      <svg
        aria-hidden="true"
        class="yc-icon"
        fill="currentColor"
        height="16"
        stroke="none"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <svg
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m9.194 5 .351.873.94.064 3.197.217-2.46 2.055-.722.603.23.914.782 3.108-2.714-1.704L8 10.629l-.798.5-2.714 1.705.782-3.108.23-.914-.723-.603-2.46-2.055 3.198-.217.94-.064.35-.874L8 2.025 9.194 5Zm-7.723-.292 3.943-.268L6.886.773C7.29-.231 8.71-.231 9.114.773l1.472 3.667 3.943.268c1.08.073 1.518 1.424.688 2.118L12.185 9.36l.964 3.832c.264 1.05-.886 1.884-1.802 1.31L8 12.4l-3.347 2.101c-.916.575-2.066-.26-1.802-1.309l.964-3.832L.783 6.826c-.83-.694-.391-2.045.688-2.118Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </svg>
    </div>
  </div>
  <div>
    <div
      class="_favorite_9c2c93 _favorite--selected_9c2c93"
    >
      <svg
        aria-hidden="true"
        class="yc-icon"
        fill="currentColor"
        height="16"
        stroke="none"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <svg
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.886.773C7.29-.231 8.71-.231 9.114.773l1.472 3.667 3.943.268c1.08.073 1.518 1.424.688 2.118L12.185 9.36l.964 3.832c.264 1.05-.886 1.884-1.802 1.31L8 12.4l-3.347 2.101c-.916.575-2.066-.26-1.802-1.309l.964-3.832L.783 6.826c-.83-.694-.391-2.045.688-2.118l3.943-.268L6.886.773Z"
            fill="currentColor"
          />
        </svg>
      </svg>
    </div>
  </div>
</body>
`;
